switch to sui walelt

--- a/styles/global.css
+++ b/styles/global.css
@@ -3,6 +3,9 @@
 @import "tailwindcss";
 @plugin "flowbite-react/plugin/tailwindcss";
 @source "../.flowbite-react/class-list.json";
+@import "flowbite/src/themes/default";
+@plugin "flowbite/plugin";
+@source "../node_modules/flowbite";
 
 body {
   background-color: black;
