--- a/styles/main.css
+++ b/styles/main.css
@@ -85,6 +85,7 @@
   font-size: 1.1rem;
   font-weight: 600;
   margin-bottom: 0.3rem;
+  text-transform: capitalize;
 }
 
 .user-id {
@@ -140,6 +141,8 @@
   font-size: 1rem;
   margin: 1rem;
   cursor: pointer;
+  width: 20%;
+  justify-content: flex-end;
 }
 
 .copy-icon {
@@ -207,7 +210,7 @@
   margin-bottom: 12px;
 }
 
-.profile-link-item button {
+.profile-link-item .profile_div {
   background: transparent;
   color: #fff;
   display: flex;
@@ -226,4 +229,24 @@
 
 .chevron-icon:hover {
   color: #fff;
+}
+
+.profile_link_span {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-transform: capitalize;
+}
+
+.Merchant_Link {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 3em;
+}
+.Merchant_Link a {
+  background-color: rgb(0, 191, 205);
+  border-radius: 1em;
+  padding: 1em;
 }
