--- a/styles/index.css
+++ b/styles/index.css
@@ -160,3 +160,100 @@
     transform: rotate(360deg);
   }
 }
+
+/*  */
+
+/* Container for the payment form */
+.payment-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+/* Header styles */
+.form-header {
+  font-size: 24px;
+  color: skyblue;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+/* Payment form */
+.payment-form {
+  background: #0017271a;
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  padding: 20px;
+  width: 100%;
+  max-width: 600px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+}
+
+/* Input groups */
+.input-group {
+  margin-bottom: 20px;
+}
+
+.input-label {
+  font-size: 1em;
+  color: white;
+}
+
+.input-field {
+  width: 100%;
+  padding: 12px;
+  background-color: rgba(255, 255, 255, 0.2);
+  color: white;
+  border-radius: 8px;
+  border: none;
+  font-size: 16px;
+  margin: 0.6em 0;
+}
+
+.input-field::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+/* Status message */
+.status-message {
+  color: skyblue;
+  text-align: center;
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+/* Button */
+.pay-btn-container {
+  display: flex;
+  justify-content: center;
+}
+
+.pay-btn {
+  background-color: rgb(0, 152, 213);
+  color: black;
+  padding: 12px 20px;
+  border-radius: 8px;
+  border: none;
+  font-size: 1.1em;
+  cursor: pointer;
+  width: 300px;
+}
+
+.pay-btn:hover {
+  background-color: #5cb3ff;
+}
+
+/* Make Payment button */
+.make-payment-btn {
+  font-size: 20px;
+  color: skyblue;
+  cursor: pointer;
+  margin-bottom: 20px;
+  transition: color 0.3s;
+}
+
+.make-payment-btn:hover {
+  color: #5cb3ff;
+}
