--- a/styles/merchant.css
+++ b/styles/merchant.css
@@ -29,11 +29,26 @@ a:hover {
 }
 
 /* Card Styles */
+.Merchant_link {
+  font-size: 1em;
+  text-transform: uppercase;
+  padding: 2em;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+.Merchant_link span{
+  margin-right: 0.5em;
+}
+
 .card {
   background-color: #1c1c1c;
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  width: 90%;
 }
 
 .card-header {
