--- a/styles/global.css
+++ b/styles/global.css
@@ -1,23 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@plugin "flowbite/plugin";
 
 @import "tailwindcss";
 @plugin "flowbite-react/plugin/tailwindcss";
 @source "../.flowbite-react/class-list.json";
 @import "flowbite/src/themes/default";
-@plugin "flowbite/plugin";
 @source "../node_modules/flowbite";
 
 body {
-  background-color: black;
+  background: linear-gradient(135deg, #000000, #000817);
   font-family: "Inter", serif;
   font-optical-sizing: auto;
   font-style: normal;
   color: white;
 }
-
+a:hover {
+  text-decoration: none !important;
+}
 /* Styles for the dark theme form */
 .container {
-  background-color: #121212; /* Black background */
   color: #fff; /* White text */
   display: flex;
   justify-content: center;
