--- a/styles/main.css
+++ b/styles/main.css
@@ -113,7 +113,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 1.5rem;
+  /* padding: 1rem 1.5rem; */
   text-decoration: none;
   color: #fff;
   font-size: 1rem;
