--- a/styles/global.css
+++ b/styles/global.css
@@ -8,12 +8,48 @@
 @source "../node_modules/flowbite";
 
 body {
-  background: linear-gradient(135deg, #000000, #000817);
   font-family: "Inter", serif;
   font-optical-sizing: auto;
   font-style: normal;
   color: white;
 }
+body {
+  margin: 0;
+  height: 100vh;
+  background: linear-gradient(to bottom, #4a90e2 0%, #0e0f11 40%, #0e0f11 100%);
+  position: relative;
+  background-repeat: no-repeat;
+}
+
+/* Grid Overlay */
+/* Grid Overlay */
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0.15) 1px,
+      transparent 1px
+    ),
+    linear-gradient(to bottom, rgba(255, 255, 255, 0.15) 1px, transparent 1px);
+  background-size: 50px 50px;
+  pointer-events: none;
+  z-index: 1;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.25;
+  transition: opacity 0.5s ease;
+}
+
+/* Fade effect when the grid is centered */
+body:hover::before {
+  opacity: 0.05; /* Make it even more transparent in the center */
+}
+
 a:hover {
   text-decoration: none !important;
 }
@@ -24,7 +60,7 @@ a:hover {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  font-family: "Arial", sans-serif;
+  font-family: "Inter", sans-serif;
   padding: 20px;
   flex-direction: column;
 }
