--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 3rem 1rem;
   min-height: 100vh;
-  background: linear-gradient(135deg, #000000, #000817);
+  /* background: linear-gradient(135deg, #000000, #000817); */
   font-family: "Inter", sans-serif;
 }
 
