--- a/styles/main.css
+++ b/styles/main.css
@@ -246,7 +246,34 @@
   padding: 3em;
 }
 .Merchant_Link a {
-  background-color: rgb(0, 191, 205);
+  background-color: #e7b82b;
   border-radius: 1em;
   padding: 1em;
 }
+
+.Card_flex {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.Card_flex svg {
+  margin: 0;
+  color: white;
+}
+.Card_flex span {
+  margin-left: 0.5em;
+  color: white;
+}
+
+.PaymentCard div {
+  border-color: #e7b82b;
+}
+
+.PaymentCard_Bg {
+  background: #002d301e;
+  height: 100%;
+}
+/* .suiPay img {
+  width: 10px !important;
+} */
